Major performance fix on library (see #83). Fixed dropdown background being on inconsistent layers. Rework navbar placement internally, no longer requires JS! Come up with temporary workaround for overlay exit game dialog being cut short (closes #82).

--- a/css/context.css
+++ b/css/context.css
@@ -1,7 +1,7 @@
 /* DROPDOWN --------------------------------------------------------------------------------------------------------- */
 
 /* DROPDOWN */
-._30wJO3MC4x-I1OWpy1TAeE._DialogInputContainer {
+._2yAm5LY_eu-Vg_52l0HFlM {
   border-radius: var(--zehn-size-context-radius) !important;
   margin: 0 !important;
   padding: var(--zehn-size-context-padding) !important;
@@ -12,12 +12,14 @@
   /* background-image: var(--zehn-acrylic-texture) !important; */
 }
 
+._30wJO3MC4x-I1OWpy1TAeE._DialogInputContainer {
+  padding: 0 !important;
+}
+
 ._2oAiZidGyUxL-hfupFDQ2m {
   border-radius: var(--zehn-size-context-entry-radius) !important;
   margin:  0 !important;
   padding: var(--zehn-size-context-entry-padding) !important;
-  /* background: var(--zehn-color-list-background) padding-box !important; */
-  /* border: var(--zehn-size-context-entry-border) solid var(--zehn-color-context-entry-border) !important; */
   box-sizing: border-box !important;
   line-height: var(--zehn-size-context-line) !important;
   max-width: var(--zehn-size-context-entry-width) !important;
@@ -27,12 +29,10 @@
   border: none !important;
 
   &:hover {
-    /* background: var(--zehn-color-list-background-hover) padding-box !important; */
     background: transparent !important;
   }
 
   &:active {
-    /* background: var(--zehn-color-list-background-active) padding-box !important; */
     background: transparent !important;
   }
 }
@@ -196,7 +196,8 @@
 /* LIBRARY SHOWCASES DROPDOWN */
 .DesktopUI ._2Sj4-UDM-dHSxtxwQ_Pwwz._2Sj4-UDM-dHSxtxwQ_Pwwz ._DialogInputContainer {
   /* STEAM MADE THIS IMPORTANT SO WE GOTTA MATCH THE SPECIFICITY */
-  background: var(--zehn-color-context-dropdown-background) !important;
+  background: transparent !important;
+  /* background: var(--zehn-color-context-dropdown-background) !important; */
   box-shadow: none !important;
   width: unset !important;
 }
