--- a/css/core.css
+++ b/css/core.css
@@ -1872,6 +1872,8 @@ option:checked {
   margin: 0 !important;
 }
 
+/* SIDEBAR */
+._2PF_m-I5yte3WnQhpcz8RC,
 /* LIBRARY */
 ._1YdRdM9TZ_3Xolwv9aVEv- .DialogDropDown._DialogInputContainer,
 /* SCREENSHOTS DROPDOWNS */
@@ -1879,6 +1881,7 @@ option:checked {
 /* SERVERS */
 ._2rxrVvbku0AC8Qbequ4-z9 ._2X_ZpO2X_CIOIEfml3ZTcX .DialogDropDown._DialogInputContainer,
 ._2rxrVvbku0AC8Qbequ4-z9 ._341mdPDkZV7JkbIxGBREsd .DialogDropDown._DialogInputContainer {
+  display: flex !important;
   white-space: nowrap !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
@@ -1942,6 +1945,7 @@ option:checked {
   margin: 0 !important;
 }
 
+._2PF_m-I5yte3WnQhpcz8RC ._3kSh7qVSTDcPDePx9kya8C,
 ._1YdRdM9TZ_3Xolwv9aVEv- .DialogDropDown_CurrentDisplay,
 ._2rxrVvbku0AC8Qbequ4-z9 ._2X_ZpO2X_CIOIEfml3ZTcX .DialogDropDown_CurrentDisplay,
 ._2rxrVvbku0AC8Qbequ4-z9 ._341mdPDkZV7JkbIxGBREsd .DialogDropDown_CurrentDisplay {
@@ -1997,6 +2001,7 @@ option:checked {
 }
 
 /* CHEVRON */
+._2PF_m-I5yte3WnQhpcz8RC ._15aGnszAf3gHD-PFdJBoFD,
 ._1YdRdM9TZ_3Xolwv9aVEv- .DialogDropDown._DialogInputContainer .DialogDropDown_Arrow,
 ._2rxrVvbku0AC8Qbequ4-z9 ._2X_ZpO2X_CIOIEfml3ZTcX .DialogDropDown._DialogInputContainer .DialogDropDown_Arrow,
 ._2rxrVvbku0AC8Qbequ4-z9 ._341mdPDkZV7JkbIxGBREsd .DialogDropDown._DialogInputContainer .DialogDropDown_Arrow {
@@ -2008,6 +2013,7 @@ option:checked {
   width: var(--zehn-size-icon-tiny) !important;
 }
 
+._2PF_m-I5yte3WnQhpcz8RC ._15aGnszAf3gHD-PFdJBoFD .SVGIcon_DownArrowContextMenu,
 ._3nWSY9HJwc9HWeByKWggV6 .zeGUOeW3Cat4UJGCGwXPZ svg,
 ._1YdRdM9TZ_3Xolwv9aVEv- .DialogDropDown._DialogInputContainer .DialogDropDown_Arrow svg,
 ._2rxrVvbku0AC8Qbequ4-z9 ._2X_ZpO2X_CIOIEfml3ZTcX .DialogDropDown._DialogInputContainer .DialogDropDown_Arrow svg,
@@ -4009,6 +4015,7 @@ body:not(.WindowFocus) #zehnToggleFriendsHeader .zehnIcon {
   padding-top: var(--zehn-size-padding-medium) !important;
 }
 
+/* NOTES PAGED */
 .ModalDialogPopup .DialogContent:has(._3Sf_ShCtdfWp5P04k2cIgp) {
   padding-top: 0 !important;
 }
@@ -4401,7 +4408,8 @@ label>.DialogLabel {
 }
 
 .GenericConfirmDialog._DialogCenterVertically .DialogFooter .DialogButton {
-  flex: unset !important;
+  /* flex: unset !important; */
+  /* NOT SURE WHAT WE HAD THIS SET FOR BUT I MAY DOCU HERE, WAS CONFLICTING WITH EXIT, PROPERTIES DIALOGS */
 }
 
 .GenericConfirmDialog ._DialogLayout:not(.DialogButton) {
@@ -4515,6 +4523,7 @@ body.zXrpABNQHpWKgSzqnGlL {
 /* STOP OVERFLOW */
 .PopupFullWindow {
   overflow: hidden !important;
+  position: relative;
 }
 
 /* WINODW GRIP */
