--- a/css/media.css
+++ b/css/media.css
@@ -1002,10 +1002,6 @@
   background-color: transparent !important;
 }
 
-.PopupFullWindow {
-  position: relative;
-}
-
 ._3nWSY9HJwc9HWeByKWggV6:has(._2dU9SCYnAxjOss_afiRpoP) .hXJt8CFzzitOG3moJEGg- {
   transform: translateX(32px) !important;
 }
