--- a/css/popup.css
+++ b/css/popup.css
@@ -1892,7 +1892,7 @@ form:has(.zhaKeChn9HPNSMtk0ami_) {
   top: 0 !important;
   left: 0 !important;
   padding: var(--zehn-size-titlebar-text-padding) !important;
-  line-height: var(--zehn-size-titlebar-height)x !important;
+  line-height: var(--zehn-size-titlebar-height) !important;
 }
 
 .LclHwcOfHFpwObYMD1HLa ._2aHnQT0gTQ5KIsi5omK93w {
@@ -2797,6 +2797,29 @@ form:has(.zhaKeChn9HPNSMtk0ami_) {
   /* KINDA FUCKED I KNOW, BUT I DON'T HAVE MUCH ELSE TO GO ON */
   line-height: 16px !important;
   white-space: nowrap !important;
+}
+
+/* ------------------------------------------------------------------------------------------------------------------ */
+
+
+
+
+
+
+
+
+
+
+/* EXIT GAME -------------------------------------------------------------------------------------------------------- */
+
+._1hk7gsJH47tbudHbj5FVT3 {
+  min-width: 0 !important;
+  width: fit-content !important;
+}
+
+/* FUNKY WORKAROUND FOR WHATEVER THE PROBLEM IS */
+.LegacyPopup .DialogContent._1hk7gsJH47tbudHbj5FVT3 {
+  padding-bottom: 34px !important;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------ */
