--- a/css/variables.css
+++ b/css/variables.css
@@ -1592,7 +1592,7 @@
   --zehn-size-input-url-line: 24px;
 
   /* DROPDOWNS */
-  --zehn-size-dropdown-app: 100%;
+  --zehn-size-dropdown-app: 48px;
   --zehn-size-dropdown-app-width: fit-content;
   --zehn-size-dropdown-app-border: 0;
   --zehn-size-dropdown-app-radius: var(--zehn-size-radius-square);
